--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,20 @@
 # YouTube Data API v3 Key
 # Get one from: https://console.cloud.google.com/apis/credentials
 YOUTUBE_API_KEY=your_api_key_here
+
+# Database (Vercel Postgres / Neon)
+# These are auto-injected by Vercel when you link a Postgres database
+DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
+DIRECT_DATABASE_URL=postgresql://user:password@host-unpooled/dbname?sslmode=require
+
+# NextAuth.js
+# Generate a secret: openssl rand -base64 32
+NEXTAUTH_SECRET=your_secret_here
+NEXTAUTH_URL=http://localhost:3000
+
+# Admin Users (exactly 2)
+# Generate password hashes: node -e "const b=require('bcryptjs');b.hash('yourpassword',12).then(console.log)"
+ADMIN_USER_1_USERNAME=admin1_username
+ADMIN_USER_1_PASSWORD_HASH=$2b$12$...your_hash_here
+ADMIN_USER_2_USERNAME=admin2_username
+ADMIN_USER_2_PASSWORD_HASH=$2b$12$...your_hash_here
